<resources>
    <string name="app_name">VentureBox</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="OTA">OTA</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="changelog_title">Changelog</string>
    <string name="updates_title">Updates</string>
    <string name="no_additional_info">No additional information</string>
    <string name="check_for_updates">Check</string>
    <string name="xposedwarningTitle">Xposed Warning</string>
    <string name="xposedwarningMessage">Xposed is not support with the ROM.</string>
    <string name="positive_button">Okay</string>
    <string name="notice_empty">There is currently no notices.</string>
    <string name="action_refresh">Refresh</string>
    <string name="config">Configuration</string>
    <string name="config_kernel">Kernel</string>
    <string name="config_halo">Halo</string>
    <string name="config_cardview">Recents Card View</string>
    <string name="config_wifinoti">WiFi Notification</string>
    <string name="config_doubletap">Double Tap</string>
    <string name="config_networktraffic">Network Traffic</string>
    <string name="config_performance">Performance Mode: </string>
    <string name="performancedesc">A special init.d mod that optimizes the kernel. [Disable if using other kernel mods that interfere with governors]</string>
    <string name="halolabel">Halo: </string>
    <string name="halodesc">Halo is a super-nifty notification center extension. With halo, you can check your notifications without taking up your whole screen</string>
    <string name="halo_state_black">Blacklist</string>
    <string name="halo_state_white">Whitelist</string>
    <string name="halo_size_miniscule">Miniscule</string>
    <string name="halo_size_small">Small</string>
    <string name="halo_size_default">Default</string>
    <string name="halo_size_large">Large</string>
    <string name="halo_size_gigantic">Gigantic</string>
    <string name="halo_size_monster">Monster</string>
    <string name="halo_notification_count_none">None</string>
    <string name="halo_notification_count_total">Total</string>
    <string name="halo_notification_count_individual">Per-app</string>
    <string name="halo_notification_count_both">Both</string>
    <string name="halo_label_tv">Enable Halo</string>
    <string name="halo_state_tv">Halo policy</string>
    <string name="halo_hide_tv">Ninja mode</string>
    <string name="halo_size_tv">Halo size</string>
    <string name="halo_pause_tv">Pause underlying app</string>
    <string name="halo_msgbox_tv">Show notification text</string>
    <string name="halo_notify_count_tv">Notification counter type</string>
    <string name="halo_unlock_ping_tv">Ping new notifications on unlock</string>
    <string name="cardviewlabel">Card View: </string>
    <string name="cardviewdesc">A quick and easy toggle for AOSPA\'s new card view</string>
    <string name="wifinotilabel">WiFi Notifications: </string>
    <string name="wifinotidesc">Get an alert every time you connect to wifi</string>
    <string name="wifinotidisabled">Disabled</string>
    <string name="wifinotitoast">Toast</string>
    <string name="wifinotinotification">Notification</string>
    <string name="wifinotinotificationsound">Notification with Sound</string>
    <string name="doubletapstatuslabel">Double Tap Statusbar to Sleep: </string>
    <string name="doubletapnavlabel">Double Tap Navbar to Sleep: </string>
    <string name="doubletapdesc">Double tap your status bar to quickly put your device to sleep</string>
    <string name="networktraffic_state_disabled">Disabled</string>
    <string name="networktraffic_state_outgoing">Outgoing</string>
    <string name="networktraffic_state_incoming">Incoming</string>
    <string name="networktraffic_state_both">Outgoing and incoming</string>
    <string name="networktraffic_type_bits">Bits per second</string>
    <string name="networktraffic_type_bytes">Bytes per second</string>
    <string name="networktraffic_refresh_500">500 ms</string>
    <string name="networktraffic_refresh_1000">1000 ms</string>
    <string name="networktraffic_refresh_1500">1500 ms</string>
    <string name="networktraffic_refresh_2000">2000 ms</string>
    <string name="networktraffic_state_tv">State: </string>
    <string name="networktraffic_type_tv">Display Format: </string>
    <string name="networktraffic_refresh_tv">Refresh Rate: </string>
    <string name="networktrafficdesc">Display current network traffic in statusbar.</string>
    <string name="faq_title">FAQ</string>
    <string name="faq_q_1">ETA?</string>
    <string name="faq_a_1">¯\\_(ツ)_/¯</string>
    <string name="check_for_updates_long">Check for updates</string>
    <string name="all_up_to_date">You\'re up to date!</string>
    <string name="rom_scanning">Checking for system updates...</string>
    <string name="rom_gapps_new_version">System updates found!</string>
    <string name="rom_new_version">New ROM update found!</string>
    <string name="gapps_new_version">New Google apps update found!</string>
    <string name="no_updates">No system updates found</string>
    <string name="system_update_found">A new system update was found and is ready to download.\nPlease check the notifications that may have appeared. They will lead you to ParanoidOTA from where you will be able to download and/or install the update.\n\nUpdate(s) found:\n%1$s</string>
    <string name="system_title">System info</string>
    <string name="system_rom">ROM version: %1$s</string>
    <string name="system_maintainer">Maintainer: %1$s</string>
    <string name="system_gapps">Google apps version: %1$s %2$s</string>
    <string name="system_recovery">Recovery version: %1$s</string>
    <string name="system_recovery_unknown">Unknown</string>
    <string name="updates">Updates</string>
    <string name="updates_checking">Checking...</string>
    <string name="updates_error">Error</string>
    <string name="updates_found">System update found</string>
    <string name="updates_uptodate">You\'re up to date</string>
    <string name="no_updates_found">No updates found</string>
    <string name="check_rom_updates_error">Error checking for ROM updates</string>
    <string name="check_gapps_updates_error">Error checking for Google apps updates</string>
    <string name="system_update">System update found.\nSelect the update(s) you want to download.\n\nUpdate(s) found:</string>
    <string name="download_and_install">Download and install</string>
    <string name="update_host">Hosted at %1$s</string>
    <string name="install">Install</string>
    <string name="install_title">Ready to install</string>
    <string name="install_info">The following update(s) are ready to be installed.\n\nYou can add more zips by clicking on the \"Add file\" button.</string>
    <string name="add_file">Add file</string>
    <string name="install_now">Install now</string>
    <string name="calculating_md5">Calculating MD5 sum...</string>
    <string name="md5_mismatch">MD5 mismatch</string>
    <string name="md5_mismatch_summary">Received:\n%1$s\n\nCalculated:\n%2$s</string>
    <string name="md5_install_anyway">Continue anyway</string>
    <string name="select_actions">Select the actions you would like to perform</string>
    <string name="backup">Backup</string>
    <string name="wipe_data">Wipe Data</string>
    <string name="wipe_caches">Wipe Cache &amp; Dalvik</string>
    <string name="remove_file_title">Remove file</string>
    <string name="remove_file_summary">Do you want to remove the file from the list?\n\n%1$s</string>
    <string name="file_manager_error">No applications found to select the zip file. Please install a file manager.</string>
    <string name="alert_backup_space_title">Space left</string>
    <string name="alert_backup_space_message">There\'s less than %1$sGB in the internal SD card. Do you want to continue with the backup?</string>
    <string name="alert_backup_title">Backup</string>
    <string name="alert_backup_message">Specify the backup name (illegal characters will be removed).\n\nThe following options will only work in TWRP.</string>
    <string name="system">System</string>
    <string name="data">Data</string>
    <string name="cache">Cache</string>
    <string name="recovery">Recovery</string>
    <string name="boot">Boot</string>
    <string name="androidsecure">Android secure</string>
    <string name="sdext">SD-Ext</string>
    <string name="alert_reboot_install_title">Install update(s)</string>
    <string name="alert_reboot_one_message">Your device will reboot and install the update.</string>
    <string name="alert_reboot_more_message">Your device will reboot and install the updates.</string>
    <string name="alert_reboot_now">Install now</string>
    <string name="file_not_found">Unable to add file</string>
    <string name="changelog">Changelog</string>
    <string name="google_plus">Google+</string>
    <string name="download_card_title">Downloading system update</string>
    <string name="download_title">%1$s</string>
    <string name="cancel_download_alert_title">Cancel download</string>
    <string name="cancel_rom_download_alert_summary">Do you want to cancel the current ROM download?</string>
    <string name="cancel_gapps_download_alert_summary">Do you want to cancel the current Google apps download?</string>
    <string name="cancel_download_alert_yes">Yes</string>
    <string name="cancel_download_alert_no">No</string>
    <string name="new_system_update">New system update found</string>
    <string name="new_package_name">%1$s</string>
    <string name="new_packages">%1$s updates available for download</string>
    <string name="already_downloading_rom">You are already downloading a ROM update.</string>
    <string name="already_downloading_gapps">You are already downloading a Google apps update.</string>
    <string name="cancel_download">Cancel download(s)</string>
    <string name="downloading_info">Update(s) downloading:\n%1$s</string>
    <string name="error_cannot_resume">Error: The download couldn\'t be resumed</string>
    <string name="error_device_not_found">Error: Sdcard not mounted</string>
    <string name="error_file_already_exists">Error: File already exists</string>
    <string name="error_file_error">Error: Storage error</string>
    <string name="error_http_data_error">Error: Http error</string>
    <string name="error_insufficient_space">Error: No space left</string>
    <string name="error_too_many_redirects">Error: Too many redirects</string>
    <string name="error_unhandled_http_code">Error: Unhandled http code</string>
    <string name="error_unknown">Error: Unknown</string>
    <string name="error_device_not_found_title">Device not found</string>
    <string name="error_device_not_found_summary">A ROM for your device was not found. Please check manually.</string>
    <string name="error_device_not_found_server">A ROM for your device was not found.</string>
    <string name="settings">Settings</string>
    <string name="settings_checktime_title">Update check frequency</string>
    <string name="settings_checktime_summary">Specify the time between each update check</string>
    <string name="settings_checkgapps_title">Check for Google apps</string>
    <string name="settings_checkgapps_summary">Check also for PA specific Google apps</string>
    <string name="settings_gappstype_title">Google apps type</string>
    <string name="settings_gappstype_summary">Choose between full, mini, micro and stock gapps package</string>
    <string name="settings_deviceselect_title">[Advanced] Allow Select Device</string>
    <string name="settings_deviceselect_summary">Select device to test OTA</string>
    <string name="gapps_type_full">Full package</string>
    <string name="gapps_type_mini">Mini package</string>
</resources>