<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/card_horizontal_margin"
    android:paddingRight="@dimen/card_horizontal_margin"
    android:id="@+id/llNetworkTraffic"
    android:visibility="gone">

	<LinearLayout 
    		android:layout_width="match_parent"
    		android:layout_height="0dp"
        	android:layout_weight="1"
   		android:orientation="horizontal">

        <TextView 
		android:id="@+id/tvNetworkTrafficState"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:textColor="@color/card_text"
            	android:textSize="@dimen/card_small_text_size"
            	android:text="@string/networktraffic_state_tv"/>

        <Spinner 
		android:id="@+id/networktraffic_state_spinner"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content" />

    	</LinearLayout>
	<LinearLayout 
    		android:layout_width="match_parent"
    		android:layout_height="0dp"
        	android:layout_weight="1"
   		android:orientation="horizontal">

        <TextView 
		android:id="@+id/tvNetworkTrafficType"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:textColor="@color/card_text"
            	android:textSize="@dimen/card_small_text_size"
            	android:text="@string/networktraffic_type_tv"/>

        <Spinner 
		android:id="@+id/networktraffic_type_spinner"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content" />

    	</LinearLayout>
	<LinearLayout 
    		android:layout_width="match_parent"
    		android:layout_height="0dp"
        	android:layout_weight="1"
   		android:orientation="horizontal">

        <TextView 
		android:id="@+id/tvNetworkTrafficRefresh"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:textColor="@color/card_text"
            	android:textSize="@dimen/card_small_text_size"
            	android:text="@string/networktraffic_refresh_tv"/>

        <Spinner 
		android:id="@+id/networktraffic_refresh_spinner"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content" />

    	</LinearLayout>
	<TextView
        		android:id="@+id/tvNetworkTrafficDesc"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:textColor="@color/card_text"
			android:textSize="@dimen/card_small_text_size" 
			android:text="@string/networktrafficdesc"
        		android:paddingBottom="@dimen/card_separator_padding"/>

</LinearLayout>
